ホームボタンがHomeだったのを黄色文字でPytagora makerに変更

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,11 @@
 *::after {
   box-sizing: border-box;
 }
+
+.text-black-outline {
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
