--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,111 @@
   position: relative;
   z-index: 2;
 }
+
+.game-stage-2 {
+  width: 1200px;
+  margin: auto;
+  background-image: url("/src/assets/imgs/bg/cosmos_low.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+
+.game-stage-2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  /* 白色の半透明オーバーレイ */
+  z-index: 1;
+}
+
+.game-stage-2>* {
+  position: relative;
+  z-index: 2;
+}
+
+.game-stage-3 {
+  width: 1200px;
+  margin: auto;
+  background-image: url("/src/assets/imgs/bg/farm_low.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+
+.game-stage-3::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  /* 白色の半透明オーバーレイ */
+  z-index: 1;
+}
+
+.game-stage-3>* {
+  position: relative;
+  z-index: 2;
+}
+
+.game-stage-4 {
+  width: 1200px;
+  margin: auto;
+  background-image: url("/src/assets/imgs/bg/sweets_low.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+
+.game-stage-4::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  /* 白色の半透明オーバーレイ */
+  z-index: 1;
+}
+
+.game-stage-4>* {
+  position: relative;
+  z-index: 2;
+}
+
+.game-stage-5 {
+  width: 1200px;
+  margin: auto;
+  background-image: url("/src/assets/imgs/bg/beach_low.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+
+.game-stage-5::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  /* 白色の半透明オーバーレイ */
+  z-index: 1;
+}
+
+.game-stage-5>* {
+  position: relative;
+  z-index: 2;
+}
