表をフェードアウト

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,23 @@
   transform: translateY(-5px);
   background-color: #ffeedd;
 }
+
+/* アニメーションのスタイル */
+.fade-enter {
+  opacity: 0.01;
+  transform: scale(0.9);
+}
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 500ms, transform 500ms;
+}
+.fade-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+.fade-exit.fade-exit-active {
+  opacity: 0.01;
+  transform: scale(0.9);
+  transition: opacity 500ms, transform 500ms;
+}
